--- a/app/admin/view/ns/content/add.html
+++ b/app/admin/view/ns/content/add.html
@@ -7,6 +7,18 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-mobile" data-rule="required" class="form-control" name="row[mobile]" type="text" value="">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Contacts')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-contacts" data-rule="required" class="form-control" name="row[contacts]" type="text" value="">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
             <textarea id="c-content" class="form-control editor" rows="5" name="row[content]" cols="50"></textarea>
@@ -15,15 +27,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Pictures')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <div class="input-group">
-                <input id="c-pictures" class="form-control" size="50" name="row[pictures]" type="text">
-                <div class="input-group-addon no-border no-padding">
-                    <span><button type="button" id="plupload-pictures" class="btn btn-danger plupload" data-input-id="c-pictures" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-pictures"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
-                    <span><button type="button" id="fachoose-pictures" class="btn btn-primary fachoose" data-input-id="c-pictures" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
-                </div>
-                <span class="msg-box n-right" for="c-pictures"></span>
-            </div>
-            <ul class="row list-inline plupload-preview" id="p-pictures"></ul>
+            <input id="c-pictures" class="form-control" name="row[pictures]" type="text">
         </div>
     </div>
     <div class="form-group">
@@ -45,6 +49,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('View_count')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-view_count" class="form-control" name="row[view_count]" type="number" value="0">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
             
@@ -62,7 +72,7 @@
                         
             <select  id="c-top" data-rule="required" class="form-control selectpicker" name="row[top]">
                 {foreach name="topList" item="vo"}
-                    <option value="{$key}" {in name="key" value=""}selected{/in}>{$vo}</option>
+                    <option value="{$key}" {in name="key" value="0"}selected{/in}>{$vo}</option>
                 {/foreach}
             </select>
 
@@ -102,6 +112,18 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('Expiry_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-expiry_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:date('Y-m-d H:i:s')}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Pay_status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            
+            <div class="radio">
+            {foreach name="payStatusList" item="vo"}
+            <label for="row[pay_status]-{$key}"><input id="row[pay_status]-{$key}" name="row[pay_status]" type="radio" value="{$key}" {in name="key" value="0"}checked{/in} /> {$vo}</label> 
+            {/foreach}
+            </div>
+
         </div>
     </div>
     <div class="form-group layer-footer">
