--- a/app/admin/view/index/login.html
+++ b/app/admin/view/index/login.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <!-- YFCMF-TP6是开源程序，建议在您的网站底部保留一个YFCMF-TP6的链接 -->
-            <p class="copyright"><a href="https://www.iuok.cn">Powered By YFCMF-TP6</a></p>
+            <!-- <p class="copyright"><a href="https://www.iuok.cn">Powered By YFCMF-TP6</a></p> -->
         </div>
     </div>
 </div>
