--- a/app/admin/view/common/menu.html
+++ b/app/admin/view/common/menu.html
@@ -36,12 +36,12 @@
         {$menulist|raw}
 
         <!--以下4行可以删除或改成自己的链接,但建议你在你的网站上添加一个YFCMF-TP6的链接-->
-        <li class="header" data-rel="external">{:__('Links')}</li>
+        <!-- <li class="header" data-rel="external">{:__('Links')}</li>
         <li data-rel="external"><a href="https://doc.iuok.cn" target="_blank"><i class="fa fa-list text-red"></i>
             <span>{:__('Docs')}</span></a></li>
         <li data-rel="external"><a href="https://forum.iuok.cn" target="_blank"><i
                 class="fa fa-comment text-yellow"></i> <span>{:__('Forum')}</span></a></li>
         <li data-rel="external"><a href="https://jq.qq.com/?_wv=1027&k=5dCwyrI" target="_blank"><i
-                class="fa fa-qq text-aqua"></i> <span>{:__('QQ qun')}</span></a></li>
+                class="fa fa-qq text-aqua"></i> <span>{:__('QQ qun')}</span></a></li> -->
     </ul>
 </section>
