--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -27,7 +27,15 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Pictures')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-pictures" class="form-control" name="row[pictures]" type="text" value="{$row.pictures|htmlentities}">
+            <div class="input-group">
+                <input id="c-pictures" class="form-control" size="50" name="row[pictures]" type="text" value="{$row.pictures|htmlentities}">
+                <div class="input-group-addon no-border no-padding">
+                    <span><button type="button" id="plupload-pictures" class="btn btn-danger plupload" data-input-id="c-pictures" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-pictures"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
+                    <span><button type="button" id="fachoose-pictures" class="btn btn-primary fachoose" data-input-id="c-pictures" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
+                </div>
+                <span class="msg-box n-right" for="c-pictures"></span>
+            </div>
+            <ul class="row list-inline plupload-preview" id="p-pictures"></ul>
         </div>
     </div>
     <div class="form-group">
@@ -52,30 +60,6 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('View_count')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-view_count" class="form-control" name="row[view_count]" type="number" value="{$row.view_count|htmlentities}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            
-            <div class="radio">
-            {foreach name="statusList" item="vo"}
-            <label for="row[status]-{$key}"><input id="row[status]-{$key}" name="row[status]" type="radio" value="{$key}" {in name="key" value="$row.status"}checked{/in} /> {$vo}</label> 
-            {/foreach}
-            </div>
-
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Top')}:</label>
-        <div class="col-xs-12 col-sm-8">
-                        
-            <select  id="c-top" data-rule="required" class="form-control selectpicker" name="row[top]">
-                {foreach name="topList" item="vo"}
-                    <option value="{$key}" {in name="key" value="$row.top"}selected{/in}>{$vo}</option>
-                {/foreach}
-            </select>
-
         </div>
     </div>
     <div class="form-group">
@@ -112,6 +96,30 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('Expiry_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-expiry_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:$row.expiry_time?datetime($row.expiry_time):''}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            
+            <div class="radio">
+            {foreach name="statusList" item="vo"}
+            <label for="row[status]-{$key}"><input id="row[status]-{$key}" name="row[status]" type="radio" value="{$key}" {in name="key" value="$row.status"}checked{/in} /> {$vo}</label> 
+            {/foreach}
+            </div>
+
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Top')}:</label>
+        <div class="col-xs-12 col-sm-8">
+                        
+            <select  id="c-top" data-rule="required" class="form-control selectpicker" name="row[top]">
+                {foreach name="topList" item="vo"}
+                    <option value="{$key}" {in name="key" value="$row.top"}selected{/in}>{$vo}</option>
+                {/foreach}
+            </select>
+
         </div>
     </div>
     <div class="form-group">
