--- a/app/admin/view/ns/content/add.html
+++ b/app/admin/view/ns/content/add.html
@@ -7,6 +7,15 @@
         </div>
     </div> -->
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">栏目:</label>
+        <div class="col-xs-12 col-sm-8"> 
+            <div class="form-inline" data-toggle="cxselect" data-selects="first,second">
+                <select class="first form-control" name="row[pcolumn_id]" data-url="ns.column/cxselect?pid=0"></select>
+                <select class="second form-control" name="row[column_id]" data-url="ns.column/cxselect" data-query-name="pid"></select>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-mobile" data-rule="required" class="form-control" name="row[mobile]" type="text" value="">
@@ -28,10 +37,10 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('Pictures')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-pictures" class="form-control" size="50" name="row[pictures]" type="text">
+                <input id="c-pictures" class="form-control" size="50" name="row[pictures]" type="text" readonly>
                 <div class="input-group-addon no-border no-padding">
-                    <span><button type="button" id="plupload-pictures" class="btn btn-danger plupload" data-input-id="c-pictures" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-pictures"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
-                    <span><button type="button" id="fachoose-pictures" class="btn btn-primary fachoose" data-input-id="c-pictures" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
+                    <span><button data-maxcount="9" type="button" id="plupload-pictures" class="btn btn-danger plupload" data-input-id="c-pictures" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-pictures"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
+                    <span><button data-maxcount="9" type="button" id="fachoose-pictures" class="btn btn-primary fachoose" data-input-id="c-pictures" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
                 </div>
                 <span class="msg-box n-right" for="c-pictures"></span>
             </div>
@@ -44,7 +53,7 @@
             <input id="c-like_count" data-rule="required" class="form-control" name="row[like_count]" type="number" value="0">
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Share_count')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-share_count" data-rule="required" class="form-control" name="row[share_count]" type="number" value="0">
@@ -55,7 +64,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-comment_count" data-rule="required" class="form-control" name="row[comment_count]" type="number" value="0">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('View_count')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -68,7 +77,7 @@
             <input id="c-address" data-rule="required" class="form-control" name="row[address]" type="text" value="">
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Lng')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-lng" data-rule="required" class="form-control" step="0.000001" name="row[lng]" type="number" value="0.000000">
@@ -80,7 +89,7 @@
             <input id="c-lat" data-rule="required" class="form-control" step="0.000001" name="row[lat]" type="number" value="0.000000">
         </div>
     </div>
-    <!-- <div class="form-group">
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-create_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[create_time]" type="text" value="{:date('Y-m-d H:i:s')}">
@@ -92,12 +101,8 @@
             <input id="c-update_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[update_time]" type="text" value="{:date('Y-m-d H:i:s')}">
         </div>
     </div> -->
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Expiry_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-expiry_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:date('Y-m-d H:i:s')}">
-        </div>
-    </div>
+    
+   
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -105,6 +110,18 @@
             <div class="radio">
             {foreach name="statusList" item="vo"}
             <label for="row[status]-{$key}"><input id="row[status]-{$key}" name="row[status]" type="radio" value="{$key}" {in name="key" value="1"}checked{/in} /> {$vo}</label> 
+            {/foreach}
+            </div>
+
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Pay_status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            
+            <div class="radio">
+            {foreach name="payStatusList" item="vo"}
+            <label for="row[pay_status]-{$key}"><input id="row[pay_status]-{$key}" name="row[pay_status]" type="radio" value="{$key}" {in name="key" value="0"}checked{/in} /> {$vo}</label> 
             {/foreach}
             </div>
 
@@ -123,15 +140,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Pay_status')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Expiry_time')}:</label>
         <div class="col-xs-12 col-sm-8">
-            
-            <div class="radio">
-            {foreach name="payStatusList" item="vo"}
-            <label for="row[pay_status]-{$key}"><input id="row[pay_status]-{$key}" name="row[pay_status]" type="radio" value="{$key}" {in name="key" value="0"}checked{/in} /> {$vo}</label> 
-            {/foreach}
-            </div>
-
+            <input id="c-expiry_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:date('Y-m-d H:i:s')}">
         </div>
     </div>
     <div class="form-group layer-footer">
