--- a/app/admin/view/ns/wxuser/edit.html
+++ b/app/admin/view/ns/wxuser/edit.html
@@ -1,6 +1,6 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Openid')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-openid" data-rule="required" class="form-control" name="row[openid]" type="text" value="{$row.openid|htmlentities}">
@@ -17,11 +17,11 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-session_key" data-rule="required" class="form-control" name="row[session_key]" type="text" value="{$row.session_key|htmlentities}">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-mobile" data-rule="required" class="form-control" name="row[mobile]" type="text" value="{$row.mobile|htmlentities}">
+            <input id="c-mobile" class="form-control" name="row[mobile]" type="text" value="{$row.mobile|htmlentities}">
         </div>
     </div>
     <div class="form-group">
@@ -42,13 +42,13 @@
 
         </div>
     </div>
-    <div class="form-group">
+   <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Language')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-language" data-rule="required" class="form-control" name="row[language]" type="text" value="{$row.language|htmlentities}">
         </div>
     </div>
-    <div class="form-group">
+     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Country')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-country" data-rule="required" class="form-control" name="row[country]" type="text" value="{$row.country|htmlentities}">
@@ -65,7 +65,7 @@
         <div class="col-xs-12 col-sm-8">
             <div class='control-relative'><input id="c-city" data-rule="required" class="form-control" data-toggle="city-picker" name="row[city]" type="text" value="{$row.city|htmlentities}"></div>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Headimgurl')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -80,7 +80,7 @@
             <ul class="row list-inline plupload-preview" id="p-headimgurl"></ul>
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-create_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[create_time]" type="text" value="{:$row.create_time?datetime($row.create_time):''}">
@@ -91,7 +91,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-update_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[update_time]" type="text" value="{:$row.update_time?datetime($row.update_time):''}">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -104,12 +104,12 @@
 
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Ip')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-ip" data-rule="required" class="form-control" name="row[ip]" type="number" value="{$row.ip|htmlentities}">
         </div>
-    </div>
+    </div> -->
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
