--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -28,7 +28,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-content" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
+            <textarea id="c-content" class="form-control" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
         </div>
     </div>
     <div class="form-group">
