--- a/app/admin/view/ns/comment/add.html
+++ b/app/admin/view/ns/comment/add.html
@@ -1,6 +1,6 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Cid')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-cid" data-rule="required" class="form-control" name="row[cid]" type="number" value="0">
@@ -17,14 +17,14 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-uid" data-rule="required" class="form-control" name="row[uid]" type="number" value="0">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-content" data-rule="required" class="form-control" name="row[content]" type="text" value="">
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Pictures')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-pictures" class="form-control" name="row[pictures]" type="text">
@@ -58,6 +58,18 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('Update_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-update_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[update_time]" type="text" value="{:date('Y-m-d H:i:s')}">
+        </div>
+    </div> -->
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Is_online')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            
+            <div class="radio">
+            {foreach name="isOnlineList" item="vo"}
+            <label for="row[is_online]-{$key}"><input id="row[is_online]-{$key}" name="row[is_online]" type="radio" value="{$key}" {in name="key" value="1"}checked{/in} /> {$vo}</label> 
+            {/foreach}
+            </div>
+
         </div>
     </div>
     <div class="form-group layer-footer">
