--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -125,6 +125,18 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Is_online')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            
+            <div class="radio">
+            {foreach name="isOnlineList" item="vo"}
+            <label for="row[is_online]-{$key}"><input id="row[is_online]-{$key}" name="row[is_online]" type="radio" value="{$key}" {in name="key" value="$row.is_online"}checked{/in} /> {$vo}</label> 
+            {/foreach}
+            </div>
+
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Top')}:</label>
         <div class="col-xs-12 col-sm-8">
                         
@@ -139,7 +151,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Expiry_time')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-expiry_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:$row.expiry_time?datetime($row.expiry_time):''}">
+            <input id="c-expiry_time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[expiry_time]" type="text" value="{:$row.expiry_time?datetime($row.expiry_time):''}">
         </div>
     </div>
     
