--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -3,12 +3,15 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">栏目:</label>
         <div class="col-xs-12 col-sm-8"> 
-            <div class="form-inline" data-toggle="cxselect" data-selects="first,second">
+            <div class="form-inline" data-toggle="cxselect" data-selects="first,second,three">
                 <select class="first form-control" name="row[pcolumn_id]" data-url="ns.column/cxselect?pid=0">
                     <option value="{$row.pcolumn_id}" selected=""></option>
                 </select>
                 <select class="second form-control" name="row[column_id]" data-url="ns.column/cxselect" data-query-name="pid">
                     <option value="{$row.column_id}" selected=""></option>
+                </select>
+                <select class="three form-control" name="row[addr_column_id]" data-url="ns.column/cxselect" data-query-name="pid">
+                    <option value="{$row.addr_column_id}" selected=""></option>
                 </select>
             </div>
         </div>
