--- a/app/admin/view/ns/column/add.html
+++ b/app/admin/view/ns/column/add.html
@@ -58,6 +58,12 @@
         </div>
     </div> -->
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Template')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <textarea id="c-template" class="form-control" rows="15" name="row[template]" cols="50"></textarea>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Sort')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-sort" data-rule="required" class="form-control" name="row[sort]" type="number" value="1">
