--- a/app/admin/view/ns/ads/add.html
+++ b/app/admin/view/ns/ads/add.html
@@ -50,7 +50,7 @@
             <input id="c-link_info" class="form-control" name="row[link_info]" type="text">
         </div>
     </div>
-    <div class="form-group" style="color: red;">
+    <!-- <div class="form-group" style="color: red;">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
             <div id="link1">
@@ -64,7 +64,7 @@
                 <p>*要跳转的小程序appid(只有同一公众号下的关联的小程序之间才可相互跳转)</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
