--- a/app/admin/view/ns/navigation/index.html
+++ b/app/admin/view/ns/navigation/index.html
@@ -12,6 +12,16 @@
 
 
     <div class="panel-body">
+        <div class="alert alert-success-light">
+            <b>内部跳转:</b><br>
+                1.跳转栏目内容列表,栏目id值在栏目管理中获取:  ../columnlist/columnlist?id=1<br>
+                2.跳转内容详情页面,id值在内容管理中获取:  ../detail/detail?cid=121<br>
+                3.跳转发布页：../column/column<br>
+            <b>外部跳转:</b><br>
+                1.当链接为网页外部跳转链接，需要在小程序后台配置业务域名。<br>
+            <b>小程序跳转:</b><br>
+                1.输入关联的小程序AppID
+        </div>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="one">
                 <div class="widget-body no-padding">
