--- a/app/admin/view/ns/content/add.html
+++ b/app/admin/view/ns/content/add.html
@@ -11,7 +11,7 @@
         <div class="col-xs-12 col-sm-8"> 
             <div class="form-inline" data-toggle="cxselect" data-selects="first,second,three" data-required="true">
                 <select class="first form-control" name="row[pcolumn_id]" data-url="ns.column/cxselect?pid=0" id="first"></select>
-                <select class="second form-control" name="row[column_id]" data-url="ns.column/cxselect" data-query-name="pid"></select>
+                <select class="second form-control" name="row[column_id]" data-url="ns.column/cxselect" data-query-name="pid" id="second"></select>
                 <select class="three form-control" name="row[addr_column_id]" data-url="ns.column/cxselect" data-query-name="pid"></select>
             </div>
         </div>
