--- a/app/admin/view/ns/column/add.html
+++ b/app/admin/view/ns/column/add.html
@@ -9,6 +9,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
         <div class="col-xs-12 col-sm-8">
+            <input id="c-level" class="form-control" name="row[level]" type="hidden" value="1">
             <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text" value="">
         </div>
     </div>
