--- a/app/admin/view/ns/column/edit.html
+++ b/app/admin/view/ns/column/edit.html
@@ -10,6 +10,7 @@
         <label class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text" value="{$row.name|htmlentities}">
+            <input id="c-level" class="form-control" name="row[level]" type="hidden" value="{{$row.level}}">
         </div>
     </div>
     <div class="form-group">
