--- a/app/admin/view/ns/ads/index.html
+++ b/app/admin/view/ns/ads/index.html
@@ -14,7 +14,7 @@
     <div class="panel-body">
         <div class="alert alert-success-light">
             <b>内部跳转:</b><br>
-                1.跳转栏目内容列表,栏目id值在栏目管理中获取:  ../columnlist/columnlist?id=1<br>
+                1.跳转栏目内容列表,栏目id（一级栏目）值在栏目管理中获取:  ../columnlist/columnlist?id=1<br>
                 2.跳转内容详情页面,id值在内容管理中获取:  ../detail/detail?cid=121<br>
                 3.跳转发布页：../column/column<br>
             <b>外部跳转:</b><br>
