--- a/app/admin/view/ns/wxuser/add.html
+++ b/app/admin/view/ns/wxuser/add.html
@@ -1,6 +1,6 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Openid')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-openid" data-rule="required" class="form-control" name="row[openid]" type="text" value="">
@@ -17,7 +17,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-session_key" data-rule="required" class="form-control" name="row[session_key]" type="text" value="">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -30,7 +30,7 @@
             <input id="c-nickname" data-rule="required" class="form-control" name="row[nickname]" type="text" value="">
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Sex')}:</label>
         <div class="col-xs-12 col-sm-8">
                         
@@ -65,7 +65,7 @@
         <div class="col-xs-12 col-sm-8">
             <div class='control-relative'><input id="c-city" data-rule="required" class="form-control" data-toggle="city-picker" name="row[city]" type="text" value=""></div>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Headimgurl')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -80,7 +80,7 @@
             <ul class="row list-inline plupload-preview" id="p-headimgurl"></ul>
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-create_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[create_time]" type="text" value="{:date('Y-m-d H:i:s')}">
@@ -91,7 +91,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-update_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[update_time]" type="text" value="{:date('Y-m-d H:i:s')}">
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -104,12 +104,12 @@
 
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Ip')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-ip" data-rule="required" class="form-control" name="row[ip]" type="number" value="0">
         </div>
-    </div>
+    </div> -->
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
