--- a/app/admin/view/auth/admin/index.html
+++ b/app/admin/view/auth/admin/index.html
@@ -9,8 +9,8 @@
                         {:build_toolbar('refresh,add,delete')}
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
-                           data-operate-edit="{:$auth->check('auth.admin/edit')}"
-                           data-operate-del="{:$auth->check('auth.admin/del')}"
+                           data-operate-edit="{:$auth->check('auth/admin/edit')}"
+                           data-operate-del="{:$auth->check('auth/admin/del')}"
                            width="100%">
                     </table>
                 </div>
