--- a/app/admin/view/general/config/index.html
+++ b/app/admin/view/general/config/index.html
@@ -28,9 +28,9 @@
             {foreach $siteList as $index=>$vo}
             <li class="{$vo.active?'active':''}"><a href="#{$vo.name}" data-toggle="tab">{:__($vo.title)}</a></li>
             {/foreach}
-            <li data-toggle="tooltip" title="{:__('Add new config')}">
+            <!-- <li data-toggle="tooltip" title="{:__('Add new config')}">
                 <a href="#addcfg" data-toggle="tab"><i class="fa fa-plus"></i></a>
-            </li>
+            </li> -->
         </ul>
     </div>
 
@@ -46,7 +46,7 @@
                             <tr>
                                 <th width="15%">{:__('Title')}</th>
                                 <th width="68%">{:__('Value')}</th>
-                                <th width="15%">{:__('Name')}</th>
+                                <!-- <th width="15%">{:__('Name')}</th> -->
                                 <th width="2%"></th>
                             </tr>
                             </thead>
@@ -145,8 +145,8 @@
                                     </div>
 
                                 </td>
-                                <td>{php}echo "{\$site.". $item['name'] . "}";{/php}</td>
-                                <td><a href="javascript:;" class="btn-delcfg text-muted" data-name="{$item.name}"><i class="fa fa-times"></i></a></td>
+                                <!-- <td>{php}echo "{\$site.". $item['name'] . "}";{/php}</td> -->
+                                <!-- <td><a href="javascript:;" class="btn-delcfg text-muted" data-name="{$item.name}"><i class="fa fa-times"></i></a></td> -->
                             </tr>
                             {/foreach}
                             </tbody>
