--- a/app/admin/view/ns/column/edit.html
+++ b/app/admin/view/ns/column/edit.html
@@ -1,5 +1,7 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-
+    <div class="alert alert-success-light">
+        跳转对应的栏目内容列表的小程序路径(小程序只能跳转一级栏目)：<span>../columnlist/columnlist?id={$row.id}</span><br>
+    </div>
     <div class="form-group">
         <label  class="control-label col-xs-12 col-sm-2">{:__('Pid')}:</label>
         <div class="col-xs-12 col-sm-8">
