--- a/app/admin/view/ns/content/add.html
+++ b/app/admin/view/ns/content/add.html
@@ -153,7 +153,7 @@
 
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_online')}:</label>
         <div class="col-xs-12 col-sm-8">
             
@@ -164,7 +164,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Top')}:</label>
         <div class="col-xs-12 col-sm-8">
