--- a/app/admin/view/ns/content/edit.html
+++ b/app/admin/view/ns/content/edit.html
@@ -1,5 +1,7 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-
+    <div class="alert alert-success-light">
+            跳转内容详情页面的小程序路径  <span>../detail/detail?cid={$row.id}</span><br>
+    </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">栏目:</label>
         <div class="col-xs-12 col-sm-8"> 
@@ -152,7 +154,7 @@
 
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_online')}:</label>
         <div class="col-xs-12 col-sm-8">
             
@@ -163,7 +165,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Top')}:</label>
         <div class="col-xs-12 col-sm-8">
