--- a/app/admin/view/ns/notice/edit.html
+++ b/app/admin/view/ns/notice/edit.html
@@ -1,5 +1,7 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-
+    <div class="alert alert-success-light">
+        跳转对应的公告内容详情的小程序路径：<span>../notice/notice?id={$row.id}</span><br>
+    </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
         <div class="col-xs-12 col-sm-8">
